implement soft deletion for clusters (without cascade yet), let read endpoints to include soft-deleted records for adapters to be able to fetch them by using Unscoped methods (TODO: Find out if it's possible to use previous queries but without implicit filter for soft-deleted objects provided by gorm)
